@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - escape < and > in AUTHOR / thanks section
 
 1.61      2014-12-30 13:56:48 -0500
   - Make CPANFile part of the default [@Author::Plicease]
